src/ext/machnet_common.h

// This is the abstraction of a network flow for the applications. It is
// equivalent to the 5-tuple, with just the protocol missing (UDP is always
// assumed). This structure is used to indicate the sender or receiver of a
// message (depending on the direction). Equivalent to `struct sockaddr_in'.
struct MachnetFlow {
  uint32_t src_ip;
  uint32_t dst_ip;
  uint16_t src_port;
  uint16_t dst_port;
};
typedef struct MachnetFlow MachnetFlow_t;
/**
 * The `MachnetChannelCtx' holds all the metadata information (context) of an
 * Machnet Channel.
 *
 * It is always located at the beginning of the shared memory area.
 */
struct MachnetChannelCtx {
#define MACHNET_CHANNEL_CTX_MAGIC 0xA5A5A5A5
  uint32_t magic;  // Magic value tagged after initialization.
#define MACHNET_CHANNEL_VERSION 0x01
  uint16_t version;
  uint64_t size;  // Size of the Channel's memory, including this context.
#define MACHNET_CHANNEL_NAME_MAX_LEN 256
  char name[MACHNET_CHANNEL_NAME_MAX_LEN];
  MachnetChannelCtrlCtx_t ctrl_ctx;  // Control channel's specific metadata.
  MachnetChannelDataCtx_t data_ctx;  // Dataplane channel's specific metadata.

  MachnetRingSlot_t
      tmp_buffer_indices[MACHNET_MSG_MAX_LEN / MACHNET_MIN_CHANNEL_BUFFER_SIZE];
} __attribute__((aligned(CACHE_LINE_SIZE)));
typedef struct MachnetChannelCtx MachnetChannelCtx_t;